# vereon

./: .gitmodules  Cargo.toml  README.md  glslc_shader_compile.sh  mangohud_release.sh  simplest.bsvo
src/: camera.rs  main.rs  octree.rs  octree.rs.bak  shader.wgsl  types.rs
src/shader/: shader.wgsl
src/shader/glsl/: frag.spv  shader.frag  shader.vert  vert.spv
