[package]
name = "vereon"
version = "0.1.0"
edition = "2021"

[dependencies]
vss-rs = "0.1"

wgpu = { version = "0.19", features = ["spirv"] }

winit = "0.29"
raw-window-handle = "0.5"

imgui = "0.12"
imgui-winit-support = "0.12"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs", version = "0.24" }

cgmath = "0.18"
glam = "0.29.0"
env_logger = "0.11.5"
pollster = "0.3"
rand = "0.8"
ansi_term = "0.12.1"
log = "0.4.22"
bytemuck = { version = "1.18", features = [ "derive" ] }
